Fix text overflow styling

--- a/src/CustomMui/CustomList/styles/CustomList.scss
+++ b/src/CustomMui/CustomList/styles/CustomList.scss
@@ -37,12 +37,6 @@
         }
       }
     }
-
-    .MuiListItemText-primary {
-      overflow-x: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-    }
   }
 
   .drag-handle {
