--- a/src/assets/styles/basics/helpers.scss
+++ b/src/assets/styles/basics/helpers.scss
@@ -863,3 +863,9 @@ select {
     }
   }
 }
+
+.hide-text-overflow {
+  overflow-x: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
